<?xml version="1.0"?>
<package format="3">

  <name>tensorflow_cpp</name>
  <version>1.0.4</version>
  <description>Wrappers around the TensorFlow C++ API for easy usage in ROS</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/ika-rwth-aachen/tensorflow_cpp</url>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="raphael.vankempen@ika.rwth-aachen.de">Raphael van Kempen</author>

  <build_depend>ros_environment</build_depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
  
</package>
